[gd_scene load_steps=8 format=4 uid="uid://durvh6v8u5exu"]

[ext_resource type="Texture2D" uid="uid://ljo48af3c257" path="res://worldObjects/assets/Platform.png" id="1_h40a7"]
[ext_resource type="Script" path="res://worldObjects/scripts/blockLong.gd" id="1_kddth"]
[ext_resource type="Texture2D" uid="uid://b68521xmdsow3" path="res://worldObjects/assets/Platform_2.png" id="3_85d55"]
[ext_resource type="TileSet" uid="uid://bva4vakjtko8x" path="res://backgrounds/tilemaps/level1.tres" id="4_43dwu"]
[ext_resource type="TileSet" uid="uid://3xspu4l7xt5j" path="res://backgrounds/tilemaps/level2.tres" id="5_urnmp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tpulb"]
size = Vector2(150, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_albr6"]
size = Vector2(150, 51)

[node name="Block" type="StaticBody2D" groups=["blocks"]]
position = Vector2(0, -3)
script = ExtResource("1_kddth")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 17.5)
shape = SubResource("RectangleShape2D_tpulb")

[node name="sprite2D" type="Node2D" parent="."]
position = Vector2(-1, 15)

[node name="Platform2" type="Sprite2D" parent="sprite2D"]
visible = false
position = Vector2(0, 9)
scale = Vector2(0.119609, 0.119609)
texture = ExtResource("3_85d55")

[node name="Platform1" type="Sprite2D" parent="sprite2D"]
visible = false
position = Vector2(-1, 9)
scale = Vector2(0.121745, 0.0941406)
texture = ExtResource("1_h40a7")

[node name="TileMapLayer" type="TileMapLayer" parent="sprite2D"]
position = Vector2(0, -1)
scale = Vector2(0.1, 0.1)
tile_map_data = PackedByteArray("AAD9////AQAAAAEAAAD+////AQACAAEAAAD/////AQACAAEAAAAAAP//AQACAAEAAAABAP//AQACAAEAAAACAP//AQAEAAEAAAD9/wAAAQABAAMAAAD9/wEAAQAAAAQAAAD+/wEAAQACAAQAAAD//wEAAQACAAQAAAAAAAEAAQACAAQAAAABAAEAAQACAAQAAAACAAEAAQAEAAQAAAACAAAAAQADAAMAAAABAAAAAQACAAMAAAAAAAAAAQACAAIAAAD//wAAAQACAAIAAAD+/wAAAQACAAIAAAA=")
tile_set = ExtResource("4_43dwu")

[node name="TileMapLayer2" type="TileMapLayer" parent="sprite2D"]
visible = false
position = Vector2(0, -1)
scale = Vector2(0.1, 0.1)
tile_map_data = PackedByteArray("AAD9////AQABAAAAAAD+////AQACAAAAAAD/////AQADAAAAAAAAAP//AQACAAAAAAABAP//AQADAAAAAAACAP//AQAFAAAAAAACAAAAAQAFAAIAAAACAAEAAQAFAAEAAAD//wAAAQADAAIAAAD+/wAAAQACAAIAAAD9/wAAAQABAAIAAAD9/wEAAQAAAAEAAAD+/wEAAQACAAEAAAD//wEAAQADAAEAAAABAAEAAQADAAEAAAAAAAEAAQACAAEAAAAAAAAAAQACAAIAAAABAAAAAQADAAIAAAA=")
tile_set = ExtResource("5_urnmp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_tpulb")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 24.5)
shape = SubResource("RectangleShape2D_albr6")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
offset_left = -75.0
offset_top = -8.0
offset_right = 75.0
offset_bottom = 61.0

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
